fix: grid allows too small cols

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -99,9 +99,9 @@ p span.badge {
 }
 
 .flex-grid {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     gap: 10px;
+    grid-template-columns: auto auto auto;
 }
 
 .flex-grid-item {
